--- a/front/package.json
+++ b/front/package.json
@@ -37,5 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  }, "proxy" : "https://9b40-183-108-123-178.ngrok-free.app"
 }
