--- a/back/build.gradle
+++ b/back/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'com.google.code.gson:gson'
+
 }
 
 tasks.named('test') {
