--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toast-ui/react-editor": "^3.2.3",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -37,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, "proxy" : "https://cbe8-183-108-123-178.ngrok-free.app"
+  },
+  "proxy": "https://5ca9-183-108-123-178.ngrok-free.app"
 }
