글쓰기에디터, fetch 통신 완료

--- a/front/package.json
+++ b/front/package.json
@@ -39,5 +39,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://bb78-183-108-123-178.ngrok-free.app"
+    "proxy": "https://d706-183-108-123-178.ngrok-free.app"
 }
