#10 게시판 목록 불러오기 기능 구현

--- a/front/package.json
+++ b/front/package.json
@@ -39,5 +39,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://0f37-183-108-123-178.ngrok-free.app"
+    "proxy": "https://8a45-183-108-123-178.ngrok-free.app"
 }
