--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.2",
         "react-scripts": "5.0.1",
+        "turndown": "^7.1.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -39,5 +40,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://8a45-183-108-123-178.ngrok-free.app"
+    "proxy": "https://08f1-183-108-123-178.ngrok-free.app"
 }
