#14 게시글작성 기능구현

--- a/front/package.json
+++ b/front/package.json
@@ -40,5 +40,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://08f1-183-108-123-178.ngrok-free.app"
+    "proxy": "https://bb80-183-108-123-178.ngrok-free.app"
 }
