--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -21,7 +21,25 @@ spring:
       hibernate:
         format_sql: true      # ?? ?? ?? (??)
         show_sql: true        # ?? ?? ??
-#sever:
+  servlet:
+    multipart:
+      max-request-size: 10MB
+      max-file-size: 10MB
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY}
+      secret-key: ${AWS_SECRET_KEY}
+    s3:
+      bucket: mentalhub
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+
+    #sever:
+
   #servlet:
     #context-path: /api/v1
 
