댓글 리스폰스 닉네임 반환

--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -32,7 +32,7 @@ cloud:
       access-key: ${AWS_ACCESS_KEY}
       secret-key: ${AWS_SECRET_KEY}
     s3:
-      bucket: mentalhub
+      bucket: mentalhub1
     region:
       static: ap-northeast-2
     stack:
