--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/security?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: root  # H2 ?? ? ??? username ?? (??? ??? ??)
-    password: 2n311975#!@ # H2 ?? ? ??? password ?? (??? ??? ??)
+    password: ${MYSQL} # H2 ?? ? ??? password ?? (??? ??? ??)
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQLDialect
