--- a/back/build.gradle
+++ b/back/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 	implementation 'com.google.code.gson:gson'
+	implementation 'javax.xml.bind:jaxb-api:2.3.0'
 
 }
 
