권한 Enum타입으로 변경

--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -37,6 +37,9 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+mail:
+  address:
+    admin: gustn5309@naver.com
 
     #sever:
 
