#24 추천수 노출 및 로그인시에만 추천 가능하게 변경

--- a/front/package.json
+++ b/front/package.json
@@ -41,5 +41,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://bb80-183-108-123-178.ngrok-free.app"
+    "proxy": "https://6fe2-183-108-123-178.ngrok-free.app"
 }
