--- a/front/package.json
+++ b/front/package.json
@@ -12,8 +12,10 @@
         "react-bootstrap": "^2.10.1",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
+        "react-redux": "^9.1.1",
         "react-router-dom": "^6.22.2",
         "react-scripts": "5.0.1",
+        "redux": "^5.0.1",
         "turndown": "^7.1.3",
         "web-vitals": "^2.1.4"
     },
@@ -41,5 +43,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://6fe2-183-108-123-178.ngrok-free.app"
+    "proxy": "https://51de-183-108-123-178.ngrok-free.app"
 }
