--- a/front/package.json
+++ b/front/package.json
@@ -43,5 +43,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://51de-183-108-123-178.ngrok-free.app"
+    "proxy": "https://e0b3-183-108-123-178.ngrok-free.app"
 }
