#28 수정사항(capsLock추가, 각종 레이아웃위치 수정, 로그인실패시 alert창 추가)

--- a/front/package.json
+++ b/front/package.json
@@ -43,5 +43,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://e0b3-183-108-123-178.ngrok-free.app"
+    "proxy": "https://7b08-121-187-22-110.ngrok-free.app"
 }
